--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "remark": "^12.0.0",
     "remark-html": "^12.0.0",
     "semantic-ui-css": "^2.4.1",
-    "semantic-ui-react": "^2.0.1"
+    "semantic-ui-react": "^2.0.1",
+    "swr": "^0.3.11"
   }
 }
