--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "next": "^10.2.3",
     "react": "16.13.1",
     "react-dom": "16.13.1",
+    "router": "^1.3.5",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.0.3",
     "swr": "^0.3.11"
